[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dirs = "5.0.1"
hex = "0.4.3"
keyring = "2.0.4"
openssl = "0.10.54"
rand = "0.8.5"
ring = "0.16.20"
rustls = "0.21.2"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = "0.24.1"
webpki = "0.22.0"
webpki-roots = "0.23.1"

